Fix social links misalignment

--- a/app/assets/stylesheets/application/modules/molecules/_social_links.scss
+++ b/app/assets/stylesheets/application/modules/molecules/_social_links.scss
@@ -48,6 +48,10 @@
     .a-social-links {
       flex-direction: column;
       padding: 5px;
+
+      a {
+        margin-right: 0;
+      }
     }
   }
 }
